--- a/pinyougou-manager-web/src/main/webapp/admin/brand.html
+++ b/pinyougou-manager-web/src/main/webapp/admin/brand.html
@@ -15,7 +15,7 @@
     
 </head>
 <body class="hold-transition skin-red sidebar-mini">
-<div id="brand">
+<div id="app">
 	<!-- .box-body -->
 	<div class="box-header with-border">
 		<h3 class="box-title">品牌管理</h3>
@@ -31,7 +31,7 @@
 				<div class="form-group form-inline">
 					<div class="btn-group">
 						<button type="button" class="btn btn-default" title="新建" data-toggle="modal" data-target="#editModal" ><i class="fa fa-file-o"></i> 新建</button>
-						<button type="button" class="btn btn-default" title="删除" ><i class="fa fa-trash-o"></i> 删除</button>
+						<button type="button" class="btn btn-default" title="删除" onclick="del()"><i class="fa fa-trash-o"></i> 删除</button>
 						<button type="button" class="btn btn-default" title="刷新" onclick="window.location.reload();"><i class="fa fa-refresh"></i> 刷新</button>
 					</div>
 				</div>
@@ -59,7 +59,9 @@
 				<tbody>
 				<tbody>
 				<tr v-for="entity in list">
-					<td><input  type="checkbox" ></td>
+
+					<td><input  type="checkbox" :value="entity.id" v-model="ids" ></td>
+
 					<td>{{entity.id}}</td>
 					<td>{{entity.name}}</td>
 					<td>{{entity.firstChar}}</td>
